--- a/Backend/doctorTestingApp/test-output/old/Default suite/classes.html
+++ b/Backend/doctorTestingApp/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.doctor.testing.viewIdTesting</td>
+<td>com.doctor.testing.doctorTesting</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
